--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "grunt-contrib-sass": "latest",
         "grunt-contrib-jshint": "latest",
         "grunt-contrib-concat": "latest",
-        "grunt-contrib-uglify": "0.3.2",
+        "grunt-contrib-uglify": "latest",
         "grunt-contrib-watch": "latest",
         "grunt-imageoptim": "latest"
     }
